fixed the cards from divs to being links and some extra paddings throught the sections

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -255,7 +255,6 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 800px;
 }
 
 .crven-krst-logo {
@@ -279,7 +278,6 @@ h1 {
   width: 1290px;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 30px;
 }
 
 .widget-box {
@@ -327,7 +325,7 @@ h1 {
 }
 
 .box-three {
-  background-image: url(../img/);
+  background-image: url(../img/320703205.png);
 }
 
 .box-one:before,
@@ -356,7 +354,6 @@ h1 {
   height: 735px;
   display: flex;
   flex-direction: column;
-  padding-top: 50px;
 }
 
 .volonter-img {
@@ -390,10 +387,7 @@ h1 {
 
 .volonter-btn {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 20px;
-  width: 600px;
+  flex-direction: column;
 }
 
 .volonter-img>.dots {
@@ -405,29 +399,45 @@ h1 {
 .volonter-btn-one,
 .volonter-btn-two {
   display: flex;
-  height: 100px;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-direction: row;
+  padding: 10px;
+  align-self: center;
 }
 
-.volonter-btn-one>button {
+.volonter-dots {
   width: 20px;
   height: 20px;
   border-radius: 50%;
   border: none;
-  align-self: flex-end;
   background-color: #BF0000;
 }
 
-.volonter-btn-two>button {
+.volonter-dots {
   width: 20px;
   height: 20px;
   border-radius: 50%;
   border: none;
-  align-self: flex-start;
-
 }
 
+/* vesti/novosti/kalendar section */
+
+.vesti-container {
+  display: flex;
+  width: 100%;
+  height: 1420px;
+}
+
+.vesti {
+  display: flex;
+  flex: 2;
+  border: solid 2px #BF0000;
+}
+
+.kalendar {
+  display: flex;
+  flex: 1;
+  border: solid 2px #BF0000;
+}
 
 /* kopcinja */
 
